--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "bootstrap": "^5.3.7",
+        "rollup-plugin-visualizer": "^6.0.3",
         "vue": "^3.5.17",
         "vue-router": "^4.5.1"
     },
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^7.0.2",
         "@vitejs/plugin-vue": "^6.0.0",
+        "postcss": "^8.5.6",
+        "sass": "^1.89.2",
         "vite": "^7.0.0"
     }
 }
